--- a/Frontend/facturas.html
+++ b/Frontend/facturas.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" href="styles/facturas.css" />
 </head>
 <body>
-
-  <!-- Barra de navegación (puedes repetirla para que el usuario pueda ir a otras secciones) -->
+       
+  <!-- Barra de navegación (Modificacion de estilos) -->
   <header>
     <nav>
       <ul>
